force-app/main/default/objects/KimbleOne__Menu__c/KimbleOne__Menu__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Menu</label>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>