force-app/main/default/objects/KimbleOne__Menu__c/fields/KimbleOne__ContextItemsSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextItemsSource__c</fullName>
    <label>Context Items Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>