force-app/main/default/objects/KimbleOne__Menu__c/fields/KimbleOne__FilterSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FilterSource__c</fullName>
    <label>Filter Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>