force-app/main/default/objects/KimbleOne__Menu__c/listViews/KimbleOne__All_Columns.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All_Columns</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ContextType__c</columns>
    <columns>KimbleOne__FilterSource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns</label>
</ListView>